@@ -38,10 +38,26 @@ sub properties_from
 	$self->SUPER::properties_from;
 
 	my $pluginid = $self->{session}->param( "pluginid" );
+
+	my $import_documents = $self->{session}->param( "import_documents" );
+	if( defined($import_documents) && $import_documents eq "yes" )
+	{
+		$import_documents = 1;
+	}
+	else
+	{
+		$import_documents = 0;
+	}
 	
 	if( defined $pluginid )
 	{
-		my $plugin = $self->{session}->plugin( $pluginid, session=>$self->{session}, dataset=>$self->{session}->get_repository->get_dataset( "inbox" ), processor=>$self->{processor} );
+		my $plugin = $self->{session}->plugin(
+			$pluginid,
+			session => $self->{session},
+			dataset => $self->{session}->get_repository->get_dataset( "inbox" ),
+			processor => $self->{processor},
+			import_documents => $import_documents,
+		);
 		if( !defined $plugin || $plugin->broken )
 		{
 			$self->{processor}->add_message( "error", $self->{session}->html_phrase( "general:bad_param" ) );
@@ -317,6 +333,16 @@ sub render
 		$opt->setAttribute( "selected", "selected" ) if $self->{processor}->{plugin} && $_ eq $self->{processor}->{plugin}->get_id;
 		$opt->appendChild( $plugin->render_name );
 		$select->appendChild( $opt );
+	}
+
+	if( $session->get_repository->get_conf( "enable_web_imports" ) )
+	{
+		my $checkbox = $session->render_input_field( type=>"checkbox", name=>"import_documents", value=>"yes", class=>"ep_form_checkbox" );
+		$table->appendChild( $session->render_row_with_help(
+			help => $session->make_doc_fragment,
+			label => $self->html_phrase( "import_documents" ),
+			field => $checkbox,
+		));
 	}
 
 	$form->appendChild( $session->render_toolbox( undef, $table ) );
